Remove o link do whats

--- a/escolar/financeiro/templates/financeiro/inadimplentes_list.html
+++ b/escolar/financeiro/templates/financeiro/inadimplentes_list.html
@@ -106,8 +106,8 @@
           </td>
           <td>
             {% if pagamento.celular %}
-              <a href="https://api.whatsapp.com/send?phone=5512988043675&text=Ol%C3%A1%2C%20testando%20gerador%20de%20link %}">{{ pagamento.celular|default:"--" }}
-            </a><br>
+              {{ pagamento.celular|default:"--" }}
+            <br>
             {% else %}
               --
             {% endif %}
