ref #17 tira o bug da home, que encavalava a 1ª coluna dos recebimentos e pagamentos

--- a/escolar/core/templates/index.html
+++ b/escolar/core/templates/index.html
@@ -36,37 +36,38 @@
                     <th style="text-align:center"><input type="text" id="txtColuna3"/></th>
                   </tr>    
                 </thead>
+                <tfoot></tfoot>
                  <tbody>
                   {% for entrada in entradas_pendentes_qs %}
                    <tr>
-                    {% if can_edit %}
-                       <td style="text-align:center">
-                        <a href="{% url 'pagamentos_aluno_list' entrada.contrato.contratoaluno.aluno.id %}">
+                      <td style="text-align:center">
+                        {% if can_edit %}
+                          <a href="{% url 'pagamentos_aluno_list' entrada.contrato.contratoaluno.aluno.id %}">
                           {{ entrada.valor|numberformat_br }}</a>
-                       </td>
-                    {% else %}
-                      {{ entrada.valor|numberformat_br }}
-                    {% endif %}
-                     <td style="text-align:center">{{ entrada.data|date:'d/m/Y' }}</td>
-                     <td style="text-align:center"> 
-                      {% if entrada.contrato %}
-                        <small>{{ entrada.contrato.contratoaluno.responsavel.nome }}</small>
-                      {% else %}
-                        --
-                      {% endif %}
-                    </td>
-                    <td style="text-align:center"> 
-                      {% if entrada.contrato %}
-                        <small>{{ entrada.contrato.contratoaluno.aluno.nome }}</small>
-                      {% else %}
-                        --
-                      {% endif %}
-                    </td>
+                        {% else %}
+                          {{ entrada.valor|numberformat_br }}
+                        {% endif %}
+                      </td>
+                      <td style="text-align:center">{{ entrada.data|date:'d/m/Y' }}</td>
+                      <td style="text-align:center"> 
+                        {% if entrada.contrato %}
+                          <small>{{ entrada.contrato.contratoaluno.responsavel.nome }}</small>
+                        {% else %}
+                          --
+                        {% endif %}
+                      </td>
+                      <td style="text-align:center"> 
+                        {% if entrada.contrato %}
+                          <small>{{ entrada.contrato.contratoaluno.aluno.nome }}</small>
+                        {% else %}
+                          --
+                        {% endif %}
+                      </td>
                    </tr>
                    {% empty %}
                       Não há recebimentos pendentes
                   {% endfor %}
-                 </tbody>
+                 </tb ody>
               </table>
             </div>
             <div class="panel panel-danger">
@@ -101,17 +102,17 @@
                <tbody>
                 {% for saida in saidas_pendentes_qs %}
                  <tr>
-                  {% if can_edit %}
-                     <td style="text-align:center">
-                      <a href="{% url 'pagamento_edit' escola.id saida.id %}?list">
-                        {{ saida.valor|numberformat_br }}</a>
-                     </td>
-                  {% else %}
-                    {{ saida.valor|numberformat_br }}
-                  {% endif %}
-                   <td style="text-align:center">{{ saida.data|date:'d/m/Y' }}</td>
-                   <td style="text-align:center">{{ saida.categoria.nome }}</td>
-                   <td style="text-align:center">{{ saida.titulo }}</td>
+                    <td style="text-align:center">
+                      {% if can_edit %}
+                        <a href="{% url 'pagamento_edit' escola.id saida.id %}?list">
+                          {{ saida.valor|numberformat_br }}</a>
+                      {% else %}
+                          {{ saida.valor|numberformat_br }}
+                      {% endif %}
+                    </td>
+                    <td style="text-align:center">{{ saida.data|date:'d/m/Y' }}</td>
+                    <td style="text-align:center">{{ saida.categoria.nome }}</td>
+                    <td style="text-align:center">{{ saida.titulo }}</td>
                  </tr>
                  {% empty %}
                     Não há pagamentos pendentes
