Unifica o formulario de envio de email e de msg para whats app com link para o whats e opção de copiar a mensagem p enviar via whats se não tem email, não tem Botão para enviar email

--- a/escolar/comunicacao/templates/comunicacao/cobranca_mensagem_form.html
+++ b/escolar/comunicacao/templates/comunicacao/cobranca_mensagem_form.html
@@ -31,16 +31,18 @@ cobranca_whats_form{% extends 'base.html'%}
           <div class="row">
             <!-- {# Celular, Tablet, Computador #} -->
             <div class="col-xs-12 col-sm-9 col-md-6">
+              <a href="{{ form.instance.get_whats_app_link_cobranca }}">WhtasApp</a><br>
+              {{ form.instance.get_whats_app_link_cobranca }}
+              
               {% bootstrap_field form.email %}
-              {% bootstrap_field form.titulo %}
               {% bootstrap_field form.mensagem %}
-              {% bootstrap_field form.assinatura %}
+   
             </div>
         </div>
       </div>
       <!-- glyphicon glyphicon-print -->
       <div class="form-actions">
-        {% if can_edit %}
+        {% if can_edit and form.instance.email %}
           <input type="submit" value="Enviar email" class="btn btn-primary">
         {% endif %}
         <a href="{% url 'inadimplentes_list' escola.id %}" class="btn btn-secondary">Voltar para lista de inadimplentes</a>
