--- a/escolar/escolas/templates/escolas/alunos_list.html
+++ b/escolar/escolas/templates/escolas/alunos_list.html
@@ -31,6 +31,8 @@
           {% bootstrap_field form.ano %}
           {% bootstrap_field form.serie %}
           {% bootstrap_field form.curso %}
+          <br>
+          {% bootstrap_field form.situacao %}
         </div>
         <button type="submit" class="btn btn-primary" title="Filtrar"><i class="glyphicon glyphicon-search"></i></button>
         <a class="btn btn-small btn-info" href="." title="Apagar o filtro e listar todos"><i class="glyphicon glyphicon-remove-circle"></i></a>
